--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ body{
     width: 70%;
     margin: 5px auto 80px;
 }
+/* second-hero-section end */
+
+
+/* third-hero-section start */
 .third-hero-section{
     display: flex;
     flex-direction: column;
@@ -104,6 +108,12 @@ body{
     width: 70%;
     margin: 0 auto 100px;
 }
+iframe{
+    border-radius: 10px;
+}
+/* third-hero-section end */
+
+/* forth-hero-section start */
 .forth-hero-section{
     display: flex;
     gap: 10px;
@@ -126,6 +136,7 @@ body{
     background-color: rgb(255, 253, 242);
     padding: 40px;
 }
+/* forth-hero-section end */
 .sixth-hero-section{
     background-image: url("./assets/handshake.jpg");
     background-position: center;
@@ -135,6 +146,11 @@ body{
     width: 80%;
     margin: 5px auto 30px;
     color: #FFFFFF;
-    
+}
+.last-section{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 5px auto 30px;
 }
 
