--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@ body{
     width: 70%;
     margin: 5px auto 80px;
 }
+.bg-color{
+    background-color:  lavender;
+    padding: 30px 0px 0px 0px;
+    width: 80%;
+    margin: 0px auto;
+    border-radius: 8px;
+}
 /* second-hero-section end */
 
 
@@ -126,6 +133,8 @@ iframe{
 }
 .forth-hero-section a{
     color: #0D1321;
+    font-weight: bolder;
+    margin: 20px 0px;
     /* margin: 200px 0; */
 }
 .forth-one{
@@ -150,6 +159,10 @@ iframe{
     width: 80%;
     margin: 5px auto 30px;
     color: #FFFFFF;
+}
+div input[type="text"], input[type="button"]{
+    padding: 5px 10px;
+    margin: 10px 0px;
 }
 .last-section{
     display: flex;
