--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ body p{
     width:70% ;
     margin: 5px auto 90px;
 }
+.size{
+    font-weight: bolder;
+    font-size: 30px;
+}
 /* shareable end */
 
 
